--- a/style.css
+++ b/style.css
@@ -38,8 +38,10 @@ body {
   position: absolute;
   top: 10px;
   left: 0;
-  width: 10px;
-  height: auto;
+  width: 40px;
+  height: 55px;
+  object-fit: cover;
+  border-radius: 4px;
   animation: moveLeftRight 4s infinite alternate linear;
 }
 
