--- a/style.css
+++ b/style.css
@@ -27,9 +27,9 @@ body {
     background-color: #444;
     color: white;
   }
-  .sticker-container {
+ .sticker-container {
   position: relative;
-  height: 800px;
+  height: 80px;
   overflow: hidden;
   background-color: transparent;
 }
@@ -38,9 +38,8 @@ body {
   position: absolute;
   top: 10px;
   left: 0;
-  height: 4000px;     
-  width: auto;      
-  object-fit: contain;
+  width: 60px;
+  height: auto;
   animation: moveLeftRight 4s infinite alternate linear;
 }
 
