--- a/style.css
+++ b/style.css
@@ -38,8 +38,8 @@ body {
   position: absolute;
   top: 10px;
   left: 0;
-  width: 60px;
-  height: auto;
+  width: auto;
+  height: 60px;
   animation: moveLeftRight 4s infinite alternate linear;
 }
 
