--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
   position: absolute;
   top: 10px;
   left: 0;
-  width: auto;
+  width: 600px;
   height: 600px;
   animation: moveLeftRight 4s infinite alternate linear;
 }
