--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ body {
   }
  .sticker-container {
   position: relative;
+     width: 600px;
   height: 600px;
   overflow: hidden;
   background-color: transparent;
