--- a/style.css
+++ b/style.css
@@ -189,6 +189,7 @@ html {
 }
 
 .about-section {
+  margin-top: 70px;
   min-height: 100vh; /* chiếm toàn bộ chiều cao màn hình */
   display: flex;
   flex-direction: column;
