--- a/style.css
+++ b/style.css
@@ -111,9 +111,12 @@ html {
   z-index: 3;
   font-size: 28px;
   font-weight: bold;
-  width: 100%;
+  width: max-content;
   text-align: center;
   color: #fff; /* Chữ trắng */
+    border: 2px solid #fff;      /* viền trắng */
+  border-radius: 24px; 
+   padding: 12px 28px;
   animation: ledshadow 5s linear infinite;
 }
 
@@ -254,15 +257,15 @@ html {
 
 .product-section {
   padding: 120px 20px;
+  min-height: 100vh;
   background: #000000;
   color: white;
   text-align: center;
   margin-top: 180px; /* Khoảng cách với job-section */
-  margin-bottom: 360px;  
 }
 
 .led-gradient {
-  background: linear-gradient(270deg, #8f00ff, #00a6ff, #8f00ff);
+  background: linear-gradient(270deg, #8f00ff, #cdd0d2, #8f00ff);
   background-size: 300% 300%;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
@@ -280,4 +283,108 @@ html {
   100% {
     background-position: 100% 50%;
   }
+}
+
+/* Căn giữa và bố cục */
+.cards-container {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  padding: 50px;
+  background: #000000;
+}
+
+/* Thẻ chung */
+.card {
+  width: 250px;
+  height: 350px;
+  border-radius: 20px;
+  padding: 20px;
+  color: #292929;
+  background: #f5f5f5;
+  box-shadow: 0px 35px 65px rgba(40, 28, 210, 0.5);
+  position: relative;
+  overflow: hidden;
+  transition: transform 0.3s ease;
+}
+
+/* Khi hover có hiệu ứng nổi lên */
+.card:hover {
+  transform: translateY(-10px);
+}
+
+/* Ngày tháng */
+.card .date {
+  background: #2d2d2d;
+  color: #ffffff;
+  padding: 5px 10px;
+  display: inline-block;
+  border-radius: 8px;
+  font-weight: bold;
+  margin-bottom: 15px;
+}
+.card .date span {
+  display: block;
+  font-size: 22px;
+  color: rgb(157, 66, 222);
+}
+
+.card2 {
+    background: #7900d6;    /* nền tím */
+  color: #fff;  
+  box-shadow: 0px 35px 65px rgba(143, 0, 255, 0.6); /* bóng tím */
+}
+
+
+
+.card2 .date span {
+  color: #fefcfc; /* Chữ tím */
+}
+
+.job-bg-video {
+  position: absolute;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  pointer-events: none; /* Để click vào nội dung vẫn được */
+  z-index: -1; 
+  filter: brightness(1);
+}
+
+.job-section > *:not(.job-bg-video) {
+  position: relative;
+  z-index: 1;
+}
+
+.video-fade-top {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  height: 50px; /* Điều chỉnh cao thấp tuỳ mắt nhìn */
+  background: linear-gradient(to bottom, #000 0%, transparent 100%);
+  pointer-events: none;
+  z-index: 2;
+}
+
+/* Fade ở dưới */
+.video-fade-bottom {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 50px;
+  background: linear-gradient(to top, #000 0%, transparent 100%);
+  pointer-events: none;
+  z-index: 2;
+}
+
+.job-list {
+  text-align: left;
+  padding-left: 20px;
+  margin: 0;
+}
+.job-list li {
+  margin-bottom: 6px;
 }
