--- a/style.css
+++ b/style.css
@@ -253,6 +253,10 @@ html {
   background: #000000;
   color: white;
   text-align: center;
+   position: relative;
+  overflow: hidden;
+  padding-left: 0;
+  padding-right: 0;
 }
 
 .product-section {
@@ -308,6 +312,20 @@ html {
   transition: transform 0.3s ease;
 }
 
+@media screen and (min-width: 768px) {
+  .card {
+    max-width: 300px;
+    font-size: 15px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .card {
+    max-width: 95%; /* Đảm bảo hiển thị vừa màn hình điện thoại */
+    font-size: 14px;
+  }
+}
+
 /* Khi hover có hiệu ứng nổi lên */
 .card:hover {
   transform: translateY(-10px);
@@ -343,13 +361,15 @@ html {
 
 .job-bg-video {
   position: absolute;
-  top: 0; left: 0;
-  width: 100%;
+  top: 0;
+  left: 50%;
+  width: 100vw;
   height: 100%;
   object-fit: cover;
-  pointer-events: none; /* Để click vào nội dung vẫn được */
-  z-index: -1; 
+  pointer-events: none;
+  z-index: -1;
   filter: brightness(1);
+  transform: translateX(-50%);
 }
 
 .job-section > *:not(.job-bg-video) {
@@ -379,6 +399,7 @@ html {
   pointer-events: none;
   z-index: 2;
 }
+
 
 .job-list {
   text-align: left;
