--- a/style.css
+++ b/style.css
@@ -321,7 +321,8 @@ html {
 
 @media screen and (max-width: 767px) {
   .card {
-    max-width: 95%; /* Đảm bảo hiển thị vừa màn hình điện thoại */
+    max-width: 100%;
+    width: 100%; /* Đảm bảo hiển thị vừa màn hình điện thoại */
     font-size: 14px;
     box-sizing: border-box;
   }
@@ -404,7 +405,7 @@ html {
 
 .job-list {
   text-align: left;
-  padding-left: 20px;
+  padding-left: 10px;
   margin: 0;
   word-break: break-word;
 }
