--- a/style.css
+++ b/style.css
@@ -298,6 +298,14 @@ html {
   background: #000000;
 }
 
+@media screen and (max-width: 767px) {
+  .cards-container {
+    flex-direction: column;
+    gap: 20px;
+    padding: 10px; /* giảm padding để card rộng hơn */
+  }
+}
+
 /* Thẻ chung */
 .card {
   width: 250px;
